--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -62,3 +62,10 @@ main {
     max-width: fit-content;
     margin: auto;
 }
+
+footer {
+    font-size: 20px;
+    max-width: 60vw;
+    margin: auto;
+    border-top: solid black 3px;
+}
