--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -63,9 +63,27 @@ main {
     margin: auto;
 }
 
+#highscoreBtn {
+    background: none;
+	color: blueviolet;
+	border: none;
+	padding: 0;
+	font: inherit;
+	cursor: pointer;
+	outline: inherit;
+    
+}
+
+#highScoreSection {
+    justify-content: center;
+    flex-direction: column;
+    
+}
+
 footer {
     font-size: 20px;
     max-width: 60vw;
     margin: auto;
+    margin-top: 40px;
     border-top: solid black 3px;
 }
